After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745562 - gedit titlebar is no longer draggable
gedit titlebar is no longer draggable
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkGesture
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-03-03 22:04 UTC by Mantas Mikulėnas (grawity)
Modified: 2015-03-05 02:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
widget: Improve hack to ignore window drags from widgets using motion events (4.74 KB, patch)
2015-03-03 22:09 UTC, Carlos Garnacho
committed Details | Review

Description Mantas Mikulėnas (grawity) 2015-03-03 22:04:42 UTC
The gedit headerbar can no longer be dragged to move the window. Meanwhile, the controls in it _do_ react to drags. Possibly caused by the fixes to bug 744945 according to IRC.

gtk 3.15.10-3-g05ef313 (bad)
gtk 3.15.9-50-g22c83e5 (bad)
gtk 3.15.9 (good)
gedit 3.15.91

(garnacho_) baedert: there, the header bar is in a paned, so the side pane can be shown/hidden
(garnacho_) mclasen: my hack to discern widgets taking motions break there :/
(@mclasen) garnacho_: any way to put it back together ? or do we have to special-case based on headerbar parente ?
(garnacho_) mclasen: not we can do much better atm in this case... gtkpaned is kind of special in its usage of the pan gesture (it being ignored on most of the widget surface). We could just not deny as early, and wait for the event widget gesture to claim before, but that'd break DnD, as the window drag threshold is shorter
Comment 1 Carlos Garnacho 2015-03-03 22:09:21 UTC
Created attachment 298487 [details] [review]
widget: Improve hack to ignore window drags from widgets using motion events

Postpone until the last moment whether the target widget still potentially uses
updates from this sequence, or window dragging actually applies because all
gestures on the target went to denied state.
Comment 2 Matthias Clasen 2015-03-03 22:13:53 UTC
Review of attachment 298487 [details] [review]:

Might be good to mention the specific case we're addressing here, in a comment ? 

"This fixes window dragging on empty space in a headerbar that is contained in a paned (as in e.g. gedit)."